# rcairplane

./: CMakeLists.txt  README.md  rcairplane.ino
airplane/: airplane.ino  communication.h  communication.ino
control/: control.ino  control.kicad_pcb  control.kicad_prl  control.kicad_pro  control.kicad_sch  fp-info-cache  platformio.ini
control/src/: main.cpp
kicad/control/: control.kicad_prl  control.kicad_pro
kicad/libs/PlaneComponents/: PlaneComponents.bak  PlaneComponents.kicad_sym
kicad/libs/PlaneFootprints.pretty/: 14AWG_Wire.kicad_mod  BMP280.kicad_mod  (+9 more)
kicad/plane/: #auto_saved_files#  fp-info-cache  fp-lib-table  plane.kicad_pcb  plane.kicad_prl  plane.kicad_pro  plane.kicad_sch  sym-lib-table  ~plane.kicad_pcb.lck
libraries/RC_FlightControls/: RC_FlightControls.cpp  RC_FlightControls.h
libraries/RC_Lighting/: RC_Lighting.cpp  RC_Lighting.h
libraries/RC_Log/: RC_Log.cpp  RC_Log.h
libraries/RC_Radio/: RC_Radio.cpp  RC_Radio.h
modules/: flightscontrols.h  lighting.h
plane/: platformio.ini
plane/src/: Engine.cpp  Engine.h  FlightControls.cpp  FlightControls.h  Lighting.cpp  Lighting.h  Radio.cpp  Radio.h  main.cpp
src/: gpio.cpp  gpio.h  main.cpp  pch.h  raspgpio.cpp  raspgpio.h  receiver.cpp  transmitter.cpp  utils.h
src/control/: main.cpp
src/gpio/: raspgpio.cpp  raspgpio.h
src/i2c/: i2cbus.cpp  i2cbus.h  i2cdevice.cpp  i2cdevice.h
src/math/: math.cpp  math.h
src/modules/: ads1115.cpp  ads1115.h  servo.cpp  servo.h
src/plane/: lighting.cpp  lighting.h  main.cpp  plane.cpp  plane.h  rcplane.cpp  rcplane.h
src/utils/: utils.cpp
(+3 files in other folders)
